GNOME Bugzilla – Bug 624298
GDM RBAC fix for Solaris
Last modified: 2010-09-15 18:56:34 UTC
Created attachment 165842 [details] [review] patch fixing problem. GDM supports RBAC on Solaris for determining whether or not to support the shutdown/restart buttons. The code in GDM master does not work and always shows the buttons regardless of RBAC setup. The attached patch fixes this problem. Can this go upstream?
i've pushed a slightly different fix as commit d8a75a806215cf95832de70da7fdb9c7592d697f please reopen if you still have problems.