Don't show shutdown options when not available

The logic for showing the shut down menu was a little
iffy before.  This is apparently causing issues on solaris,
and probably elsewhere.

https://bugzilla.gnome.org/show_bug.cgi?id=624298